[gd_scene load_steps=13 format=2]

[ext_resource path="res://Textures/hud/mugshots/UA_good.png" type="Texture" id=1]
[ext_resource path="res://Textures/hud/mugshots/BuildCharge.png" type="Texture" id=2]
[ext_resource path="res://Ui/MyButton.gd" type="Script" id=3]
[ext_resource path="res://Textures/hud/mugshots/glow.png" type="Texture" id=4]
[ext_resource path="res://Sounds/sfx/INT_construction.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/sfx/INT_constructioncomplete_building.ogg" type="AudioStream" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 50, 30 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.580392 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ null, ExtResource( 2 ) ],
"loop": true,
"name": "pulse",
"speed": 10.0
} ]

[node name="Button" type="TextureRect"]
margin_right = 50.0
margin_bottom = 30.0
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 50.0
margin_bottom = 30.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
action_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charge" type="TextureProgress" parent="."]
margin_right = 50.0
margin_bottom = 30.0
mouse_filter = 2
step = 0.0
texture_progress = ExtResource( 2 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 25, 15 )
frames = SubResource( 6 )
animation = "pulse"

[node name="ChargeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="FinishSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
